Separate debuginfo for executables in TiKV release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -309,7 +309,7 @@ rpath = false
 
 [profile.release]
 opt-level = 3
-debug = false
+debug = true
 codegen-units = 1
 lto = "thin"
 incremental = false
