--- a/components/tidb_query_datatype/Cargo.toml
+++ b/components/tidb_query_datatype/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 description = "Data type of a query engine to run TiDB pushed down executors"
 
 [dependencies]
+api_version = { path = "../api_version", default-features = false }
 bitfield = "0.13.2"
 bitflags = "1.0.1"
 boolinator = "2.4.0"
