--- a/components/tidb_query_executors/Cargo.toml
+++ b/components/tidb_query_executors/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 description = "A vector query engine to run TiDB pushed down executors"
 
 [dependencies]
+api_version = { path = "../api_version", default-features = false }
 codec = { path = "../codec", default-features = false }
 collections = { path = "../collections" }
 fail = "0.5"
