--- a/components/backup-stream/Cargo.toml
+++ b/components/backup-stream/Cargo.toml
@@ -40,7 +40,7 @@ futures-io = "0.3"
 
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 hex = "0.4"
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.4"
 log_wrappers = { path = "../log_wrappers" }
 online_config = { path = "../online_config" }
