--- a/components/engine_rocks_helper/Cargo.toml
+++ b/components/engine_rocks_helper/Cargo.toml
@@ -24,5 +24,5 @@ tikv_util = { path = "../tikv_util", default-features = false }
 
 [dev-dependencies]
 engine_test = { path = "../engine_test" }
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info", default-features = false }
+kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
 tempfile = "3.0"
