--- a/components/into_other/Cargo.toml
+++ b/components/into_other/Cargo.toml
@@ -6,5 +6,5 @@ publish = false
 
 [dependencies]
 engine_traits = { path = "../engine_traits", default-features = false }
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
