--- a/components/proxy_server/Cargo.toml
+++ b/components/proxy_server/Cargo.toml
@@ -36,6 +36,7 @@ backup-stream-debug = ["backup-stream/backup-stream-debug"]
 
 [dependencies]
 api_version = { path = "../api_version" }
+async-stream = "0.2"
 backup = { path = "../backup", default-features = false }
 backup-stream = { path = "../backup-stream", default-features = false }
 causal_ts = { path = "../causal_ts" }
@@ -51,28 +52,36 @@ engine_rocks = { path = "../engine_rocks", default-features = false }
 engine_rocks_helper = { path = "../engine_rocks_helper" }
 engine_traits = { path = "../engine_traits", default-features = false }
 error_code = { path = "../error_code", default-features = false }
+fail = "0.5"
 file_system = { path = "../file_system", default-features = false }
 fs2 = "0.4"
 futures = "0.3"
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored"] }
 grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
 hex = "0.4"
-
+hyper = { version = "0.14", features = ["full"] }
 itertools = "0.10"
 keys = { path = "../keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+lazy_static = "1.3"
 libc = "0.2"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 log_wrappers = { path = "../log_wrappers" }
+mime = "0.3.13"
 nix = "0.23"
 online_config = { path = "../online_config" }
+
+openssl = "0.10"
 pd_client = { path = "../pd_client", default-features = false }
+pin-project = "1.0"
+pprof = { git = "https://github.com/tikv/pprof-rs.git", rev = "a5a993a33a23557b27e633f18723366281d3b1c0", default-features = false, features = ["flamegraph", "protobuf-codec"] }
 prometheus = { version = "0.13", features = ["nightly"] }
 protobuf = { version = "2.8", features = ["bytes"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raft_log_engine = { path = "../raft_log_engine", default-features = false }
 raftstore = { path = "../raftstore", default-features = false }
 rand = "0.8"
+regex = "1.3"
 resolved_ts = { path = "../../components/resolved_ts", default-features = false }
 resource_metering = { path = "../resource_metering" }
 security = { path = "../security", default-features = false }
@@ -89,8 +98,10 @@ tikv = { path = "../..", default-features = false }
 tikv_alloc = { path = "../tikv_alloc" }
 tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
+tokio-openssl = "0.6"
 toml = "0.5"
 txn_types = { path = "../txn_types", default-features = false }
+url = "2"
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 
 [target.'cfg(unix)'.dependencies]
