add async reschedule
Signed-off-by: glorv <glorvs@163.com>

--- a/components/tidb_query_common/Cargo.toml
+++ b/components/tidb_query_common/Cargo.toml
@@ -20,6 +20,7 @@ serde_json = "1.0"
 thiserror = "1.0"
 tikv_util = { path = "../tikv_util", default-features = false }
 time = "0.1"
+yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 
 [dev-dependencies]
 byteorder = "1.2"
