--- a/components/test_storage/Cargo.toml
+++ b/components/test_storage/Cargo.toml
@@ -26,6 +26,7 @@ collections = { path = "../collections" }
 futures = "0.3"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 pd_client = { path = "../pd_client", default-features = false }
+protobuf = { version = "2.8", features = ["bytes"] }
 raftstore = { path = "../raftstore", default-features = false }
 test_raftstore = { path = "../test_raftstore", default-features = false }
 tikv = { path = "../../", default-features = false }
