--- a/components/backup/Cargo.toml
+++ b/components/backup/Cargo.toml
@@ -27,6 +27,7 @@ mem-profiling = ["tikv/mem-profiling"]
 failpoints = ["tikv/failpoints"]
 
 [dependencies]
+aws = { path = "../cloud/aws" }
 concurrency_manager = { path = "../concurrency_manager", default-features = false }
 online_config = { path = "../online_config" }
 crc64fast = "0.1"
