--- a/components/keys/Cargo.toml
+++ b/components/keys/Cargo.toml
@@ -10,6 +10,7 @@ kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 log_wrappers = { path = "../log_wrappers" }
 thiserror = "1.0"
 tikv_alloc = { path = "../tikv_alloc" }
+tikv_util = { path = "../tikv_util" }
 
 [dev-dependencies]
 panic_hook = { path = "../panic_hook" }
