rename tracker && fit ci
Signed-off-by: OneSizeFitQuorum <tanxinyu@apache.org>

--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -49,6 +49,7 @@ smallvec = "1.4"
 tikv_util = { path = "../tikv_util", default-features = false }
 time = "0.1"
 txn_types = { path = "../txn_types", default-features = false }
+tracker = { path = "../tracker" }
 
 [dev-dependencies]
 engine_test = { path = "../engine_test", default-features = false }
