--- a/components/backup-stream/Cargo.toml
+++ b/components/backup-stream/Cargo.toml
@@ -72,6 +72,7 @@ yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 [dev-dependencies]
 async-trait = "0.1"
 engine_panic = { path = "../engine_panic" }
+protobuf = { version = "2.8", features = ["bytes"] }
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 hex = "0.4"
 rand = "0.8.0"
