--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -28,6 +28,7 @@ cloud-gcp = ["sst_importer/cloud-gcp"]
 cloud-azure = ["sst_importer/cloud-azure"]
 
 [dependencies]
+arc-swap = "1.5.1"
 batch-system = { path = "../batch-system", default-features = false }
 bitflags = "1.0.1"
 byteorder = "1.2"
