--- a/components/causal_ts/Cargo.toml
+++ b/components/causal_ts/Cargo.toml
@@ -9,6 +9,7 @@ testexport = []
 
 [dependencies]
 api_version = { path = "../api_version", default-features = false }
+enum_dispatch = "0.3.8"
 engine_rocks = { path = "../engine_rocks", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
 error_code = { path = "../error_code", default-features = false }
