move tikv_util::codec to codec package
Signed-off-by: Ryan Leung <rleungx@gmail.com>

--- a/components/backup-stream/Cargo.toml
+++ b/components/backup-stream/Cargo.toml
@@ -23,6 +23,7 @@ async-compression = { version = "0.3.14", features = ["tokio", "zstd"] }
 async-trait = { version = "0.1" }
 bytes = "1"
 chrono = "0.4"
+codec = { path = "../codec", default-features = false }
 concurrency_manager = { path = "../concurrency_manager" }
 crossbeam = "0.8"
 crossbeam-channel = "0.5"
