--- a/components/engine_traits/Cargo.toml
+++ b/components/engine_traits/Cargo.toml
@@ -9,6 +9,7 @@ failpoints = ["fail/failpoints"]
 
 [dependencies]
 case_macros = { path = "../case_macros" }
+codec = { path = "../codec", default-features = false }
 error_code = { path = "../error_code", default-features = false }
 fail = "0.5"
 file_system = { path = "../file_system", default-features = false }
