--- a/components/sst_importer/Cargo.toml
+++ b/components/sst_importer/Cargo.toml
@@ -14,6 +14,7 @@ cloud-storage-dylib = ["external_storage_export/cloud-storage-dylib"]
 
 [dependencies]
 api_version = { path = "../api_version", default-features = false }
+codec = { path = "../codec", default-features = false }
 crc32fast = "1.2"
 dashmap = "5"
 encryption = { path = "../encryption", default-features = false }
