cdc, resolved_ts: add leadership resolver
Signed-off-by: Neil Shen <overvenus@gmail.com>

--- a/components/cdc/Cargo.toml
+++ b/components/cdc/Cargo.toml
@@ -26,6 +26,7 @@ portable = ["tikv/portable"]
 sse = ["tikv/sse"]
 mem-profiling = ["tikv/mem-profiling"]
 failpoints = ["tikv/failpoints"]
+pprof-fp = ["tikv/pprof-fp"]
 
 [dependencies]
 api_version = { workspace = true }
