--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -39,6 +39,11 @@ name = "deadlock_detector"
 harness = false
 path = "benches/deadlock_detector/mod.rs"
 
+[[bench]]
+name = "channel"
+path = "benches/channel/mod.rs"
+test = true
+
 [features]
 default = ["failpoints", "testexport", "test-engine-kv-rocksdb", "test-engine-raft-raft-engine", "cloud-aws", "cloud-gcp", "cloud-azure"]
 failpoints = ["fail/failpoints", "tikv/failpoints"]
