--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -56,6 +56,7 @@ engine_test = { path = "../engine_test", default-features = false }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 tempfile = "3.0"
 test_pd = { path = "../test_pd" }
+test_raftstore = { path = "../test_raftstore" }
 test_util = { path = "../test_util" }
 
 [[test]]
