add unittests and fix existing integration tests
Signed-off-by: cosven <yinshaowen241@gmail.com>

--- a/components/test_raftstore/src/common-test.toml
+++ b/components/test_raftstore/src/common-test.toml
@@ -65,6 +65,9 @@ raft-store-max-leader-lease = "240ms"
 allow-remove-leader = true
 merge-check-tick-interval = "100ms"
 pd-heartbeat-tick-interval = "20ms"
+pre-become-leader-state-tick-interval = "10ms"
+exit-pre-become-leader-state-ticks = 10
+warm-up-raft-entry-cache-ticks = 2
 dev-assert = true
 hibernate-regions = true
 store-io-pool-size = 0
