--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -59,9 +59,10 @@ tracker = { path = "../tracker" }
 txn_types = { path = "../txn_types", default-features = false }
 
 [dependencies.rocksdb]
-git = "https://github.com/tikv/rust-rocksdb.git"
+git = "https://github.com/5kbpers/rust-rocksdb.git"
 package = "rocksdb"
 features = ["encryption"]
+branch = "largest-seqno"
 
 [dev-dependencies]
 rand = "0.8"
