--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -84,6 +84,10 @@ tokio-timer = "0.2"
 txn_types = { path = "../txn_types"}
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 
+[dependencies.prometheus-static-metric]
+git = "https://github.com/tikv/rust-prometheus.git"
+rev = "d919ccd35976b9b84b8d03c07138c1cc05a36087"
+
 [dependencies.yatp]
 git = "https://github.com/tikv/yatp.git"
 
