add async sleep
Signed-off-by: pingyu <yuping@pingcap.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ failpoints = [
   "raftstore/failpoints",
   "tikv_util/failpoints",
   "engine_rocks/failpoints",
+  "causal_ts/failpoints",
 ]
 cloud-aws = [
   "encryption_export/cloud-aws",
