--- a/components/causal_ts/Cargo.toml
+++ b/components/causal_ts/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [features]
 testexport = []
+failpoints = ["fail/failpoints"]
 
 [dependencies]
 api_version = { path = "../api_version", default-features = false }
